Edit listing for restaurant business

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -707,6 +707,7 @@
 <script src="resources/controller/searchAgentsController.js"></script>
 <script src="resources/controller/listAgentsController.js"></script>
 <script src="resources/controller/editPropertyDetailsController.js"></script>
+<script src="resources/controller/editPropertyDetailsControllerInteractive.js"></script>
 <script src="resources/services/propertyService.js"></script>
 <script src="resources/services/auth.service.js"></script>
 
