--- a/src/main/resources/static/resources/pages/addListingForms/coinLaundryForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/coinLaundryForm.html
@@ -124,17 +124,17 @@
             <div class="row">
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Rent</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.laundry.rent"
+                    <input type="text" class="form-control form-control-md" ng-model="property.laundry.monthlyRent"
                            name="rent" id="rent" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>NNN</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.laundry.nnn"
+                    <input type="text" class="form-control form-control-md" ng-model="property.laundry.nnnExpense"
                            name="nnn" id="nnn" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Garbage</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.laundry.garbage"
+                    <input type="text" class="form-control form-control-md" ng-model="property.laundry.garbageExpense"
                            name="garbage" id="garbage" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
