--- a/src/main/resources/static/resources/pages/addListingForms/beautySalonForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/beautySalonForm.html
@@ -158,17 +158,17 @@
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>NNN</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.nnn"
+                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.nnnExpense"
                            name="nnn" id="nnn" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Garbage</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.garbage"
+                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.garbageExpense"
                            name="garbage" id="garbage" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Utilities</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.utilities"
+                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.utilitiesExpense"
                            name="utilities" id="utilities" placeholder="$">
                 </div>
             </div>
