--- a/src/main/resources/static/resources/pages/myProfile.html
+++ b/src/main/resources/static/resources/pages/myProfile.html
@@ -32,39 +32,39 @@
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>First Name</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" value="{{profile.given_name}}">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="{{profile.given_name}}">
                            </div>
                          </div>
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>Last Name</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" value="{{profile.family_name}}">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.family_name">
                            </div>
                          </div>
                        </div>
                        <div class="form-group">
                          <label>Your Email</label>
-                         <input type="text" class="form-control form-control-lg" value="{{profile.email}}">
+                         <input type="text" class="form-control form-control-lg" ng-model="profile.email">
                        </div>
                        <div class="row">
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>Phone</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" value="+14156230182">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.given_name">
                            </div>
                          </div>
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>Fax</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" value="">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.fax">
                            </div>
                          </div>
                        </div>
                        <div class="form-group">
                          <label>About Me</label>
-                         <textarea class="form-control form-control-lg text-editor" placeholder=""></textarea>
+                         <textarea class="form-control form-control-lg text-editor" placeholder="" ng-model="profile.aboutMe"></textarea>
                        </div>
-                       <h3 class="subheadline">Social Links</h3>
+                       <!-- <h3 class="subheadline">Social Links</h3>
                        <div class="form-group">
                          <label>Twitter</label>
                          <div class="input-group"> <span class="input-group-addon"><i class="fa fa-fw fa-twitter"></i></span>
@@ -88,23 +88,23 @@
                          <div class="input-group"> <span class="input-group-addon"><i class="fa fa-fw fa-linkedin"></i></span>
                            <input type="text" class="form-control form-control-lg" placeholder="">
                          </div>
-                       </div>
+                       </div> -->
                        <h3 class="subheadline">Agent/Company Profile</h3>
                        <div class="form-group">
                          <label>Agent/Company Title</label>
-                         <input type="text" class="form-control form-control-lg">
+                         <input type="text" class="form-control form-control-lg" ng-model="profile.title">
                        </div>
                        <div class="row">
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Location</label>
-                             <input type="text" class="form-control form-control-lg" id="autocomplete" placeholder="Enter your location">
+                             <input type="text" class="form-control form-control-lg" id="autocomplete" placeholder="Enter your location" ng-model="profile.location">
                            </div>
                          </div>
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Address</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.address">
                            </div>
                          </div>
                        </div>
@@ -112,13 +112,13 @@
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>City</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="locality">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="locality" ng-model="profile.city">
                            </div>
                          </div>
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>State</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="administrative_area_level_1">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="administrative_area_level_1" ng-model="profile.state">
                            </div>
                          </div>
                        </div>
@@ -126,13 +126,13 @@
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Country</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="country">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="country" ng-model="profile.country">
                            </div>
                          </div>
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Zipcode</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="postal_code">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="postal_code" ng-model="profile.zipcode">
                            </div>
                          </div>
                        </div>
