--- a/src/main/resources/static/resources/pages/myProfile.html
+++ b/src/main/resources/static/resources/pages/myProfile.html
@@ -19,8 +19,8 @@
                               </button>
                             </div>
                           </div>
-                          <!--<input type="file" ng-file-select="onFileSelect($files)" ng-model="profile.picture">-->
-                          <!--<img ng-src="{{profile.picture}}" />-->
+                          <!--<input type="file" ng-file-select="onFileSelect($files)" ng-model="profileDetails.picture">-->
+                          <!--<img ng-src="{{profileDetails.picture}}" />-->
                         </div>
                       </div>
                     </div>
@@ -32,37 +32,37 @@
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>First Name</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="{{profile.given_name}}">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profileDetails.firstName">
                            </div>
                          </div>
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>Last Name</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.family_name">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profileDetails.lastName">
                            </div>
                          </div>
                        </div>
                        <div class="form-group">
                          <label>Your Email</label>
-                         <input type="text" class="form-control form-control-lg" ng-model="profile.email">
+                         <input type="text" class="form-control form-control-lg" ng-model="profileDetails.emailId">
                        </div>
                        <div class="row">
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>Phone</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.given_name">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profileDetails.contactNumber">
                            </div>
                          </div>
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>Fax</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.fax">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profileDetails.fax">
                            </div>
                          </div>
                        </div>
                        <div class="form-group">
                          <label>About Me</label>
-                         <textarea class="form-control form-control-lg text-editor" placeholder="" ng-model="profile.aboutMe"></textarea>
+                         <textarea class="form-control form-control-lg text-editor" placeholder="" ng-model="profileDetails.aboutAgent"></textarea>
                        </div>
                        <!-- <h3 class="subheadline">Social Links</h3>
                        <div class="form-group">
@@ -92,19 +92,19 @@
                        <h3 class="subheadline">Agent/Company Profile</h3>
                        <div class="form-group">
                          <label>Agent/Company Title</label>
-                         <input type="text" class="form-control form-control-lg" ng-model="profile.title">
+                         <input type="text" class="form-control form-control-lg" ng-model="profileDetails.agentTitle">
                        </div>
                        <div class="row">
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Location</label>
-                             <input type="text" class="form-control form-control-lg" id="autocomplete" placeholder="Enter your location" ng-model="profile.location">
+                             <input type="text" class="form-control form-control-lg" id="location" placeholder="Enter your location" ng-model="profileDetails.location">
                            </div>
                          </div>
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Address</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profile.address">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="address" ng-model="profileDetails.address">
                            </div>
                          </div>
                        </div>
@@ -112,13 +112,13 @@
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>City</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="locality" ng-model="profile.city">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="locality" ng-model="profileDetails.city">
                            </div>
                          </div>
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>State</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="administrative_area_level_1" ng-model="profile.state">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="administrative_area_level_1" ng-model="profileDetails.state">
                            </div>
                          </div>
                        </div>
@@ -126,13 +126,13 @@
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Country</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="country" ng-model="profile.country">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="country" ng-model="profileDetails.country">
                            </div>
                          </div>
                          <div class="col-lg-6">
                            <div class="form-group">
                              <label>Zipcode</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" id="postal_code" ng-model="profile.zipcode">
+                             <input type="text" class="form-control form-control-lg" placeholder="" id="postal_code" ng-model="profileDetails.zipcode">
                            </div>
                          </div>
                        </div>
