Edit forms for businesses

--- a/src/main/resources/static/resources/pages/editListingForms/restaurantEditForm.html
+++ b/src/main/resources/static/resources/pages/editListingForms/restaurantEditForm.html
@@ -67,28 +67,28 @@
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="dishWasher" id="dishWasher" ng-model="propDetails.dishWasher"
-                               ng-init="propDetails.dishWasher='Yes'" ng-false-value="No" ng-true-value="Yes">
+                               ng-false-value="No" ng-true-value="Yes">
                         <label for="dishWasher">Dishwasher</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="oven" id="oven" ng-model="propDetails.oven"
-                               ng-init="propDetails.oven='Yes'" ng-false-value="No" ng-true-value="Yes">
+                               ng-false-value="No" ng-true-value="Yes">
                         <label for="oven">Range/Oven</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="walkInFreezer" id="walkInFreezer" ng-model="propDetails.walkInFreezer"
-                               ng-init="propDetails.walkInFreezer='Yes'" ng-false-value="No" ng-true-value="Yes">
+                               ng-false-value="No" ng-true-value="Yes">
                         <label for="walkInFreezer">Walk in Freezer</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="refrigerator" id="refrigerator" ng-model="propDetails.refrigerator"
-                               ng-init="propDetails.refrigerator='Yes'" ng-false-value="No" ng-true-value="Yes">
+                               ng-false-value="No" ng-true-value="Yes">
                         <label for="refrigerator">Refrigerator</label>
                     </div>
                 </div>
