Change in google api key

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -648,10 +648,12 @@
 <script>
       
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_hBkjJyRoMYVqN6DdM7E8mWTtDO-mVns&libraries=places"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7O4KppCu5tcjAzWclyFcW8zg0mxZcfJk&libraries=places"
         async defer></script>
-        
-          <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
+<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_hBkjJyRoMYVqN6DdM7E8mWTtDO-mVns&libraries=places"-->
+<!--            async defer></script>-->
+
+<script src="http://code.angularjs.org/1.2.13/angular.js"></script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
 <!-- amazon javascript sdk cdn file -->
